Add patch and get endpoint for users
